# FoxPipe

./: README.md  foxpipe.py  pyproject.toml
